crates/api-snowflake-rest/src/tests/snapshots/snowflake_compatibility/api_snowflake_rest__tests__test_rest_quick_sqls__snowflake_compatibility__create_table_bad_syntax.snap
---
source: crates/api-snowflake-rest/src/tests/test_rest_quick_sqls.rs
description: "SQL #1 [spent: 217/217ms]: create table foo\nQuery UUID: 00000000-0000-0000-0000-077eefaf4d8f"
expression: snapshot
---
{
  "data": {
    "rowtype": [],
    "rowsetBase64": null,
    "rowset": null,
    "total": null,
    "queryResultFormat": null,
    "errorCode": "001003",
    "sqlState": "42000",
    "queryId": "UUID"
  },
  "success": false,
  "message": "SQL compilation error: syntax error unexpected end of input",
  "code": "001003"
}
