crates/api-snowflake-rest/src/tests/snapshots/snowflake_compatibility/api_snowflake_rest__tests__test_rest_quick_sqls__snowflake_compatibility__create_table_missing_schema.snap
---
source: crates/api-snowflake-rest/src/tests/test_rest_quick_sqls.rs
description: "SQL #1 [spent: 195/195ms]: create table missing_schema.foo(a int)\nQuery UUID: 00000000-0000-0000-0000-077ed7b8b86a"
expression: pretty_json
---
{
  "data": {
    "rowtype": [],
    "rowsetBase64": null,
    "rowset": null,
    "total": null,
    "queryResultFormat": null,
    "errorCode": "002043",
    "sqlState": "02000",
    "queryId": "UUID"
  },
  "success": false,
  "message": "SQL compilation error: Schema 'embucket.missing_schema' does not exist or not authorized",
  "code": "002043"
}
