crates/api-snowflake-rest/src/tests/snapshots/snowflake_compatibility/api_snowflake_rest__tests__test_rest_quick_sqls__snowflake_compatibility__select_from_missing_table.snap
---
source: crates/api-snowflake-rest/src/tests/test_rest_quick_sqls.rs
description: "SQL #1 [spent: 134/134ms]: select * from foo\nQuery UUID: 00000000-0000-0000-0000-077eefaf4b3f"
expression: snapshot
---
{
  "data": {
    "rowtype": [],
    "rowsetBase64": null,
    "rowset": null,
    "total": null,
    "queryResultFormat": null,
    "errorCode": "002003",
    "sqlState": "42000",
    "queryId": "UUID"
  },
  "success": false,
  "message": "SQL compilation error: table 'embucket.public.foo' not found",
  "code": "002003"
}
